--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --config webpack.dev.js",
-    "serve": "node server.js"
+    "serve": "webpack serve --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
